# gdpr-transparency-tracing

./: .gitignore  AUTHORS.md  Makefile  README.md  build.sh  docker-compose.yml  init.sql  pom.xml
backend/: build.gradle  docker-compose.yml
benchmark/: Makefile  README.md  savescorecontent.txt
database-service/: init.sql
evilcorp-transparency-config/: README.md  pom.xml
frontend/: README.md  app.js  npm-shrinkwrap.json  package-lock.json  package.json  pom.xml
gateway/: Dockerfile  LICENSE  pom.xml
helloworld-service/: Dockerfile  pom.xml
helloworldservice11/: Dockerfile  pom.xml
highscore-service/: Dockerfile  pom.xml
highscoreservice11/: Dockerfile  pom.xml
personal-data-jaeger-client/: pom.xml  readme.md
personal-data-jaeger-extract/: Dockerfile  README.md  app.py  pyproject.toml
personal-data-opentracing-helper/: pom.xml
save-score-service/: Dockerfile  pom.xml
savescoreservice11/: Dockerfile  pom.xml
score-service/: Dockerfile  pom.xml
security-gateway/: pom.xml
simple-jaeger-extract/: Dockerfile  README.md  app.py  pyproject.toml
simple-jaeger-extract/src/simple_jaeger_extract/: extract.py  server.py
simple-jaeger-extract/src/simple_jaeger_extract/templates/: index.html
simple-jaeger-extract/tests/: conftest.py  test_extract.py  test_server.py
template-service/: Dockerfile
transparency-opentracing-helper/: LICENSE  README.md  pom.xml
transparency-opentracing-jaeger-extract/: .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-entrypoint.sh  pyproject.toml
transparency-opentracing-jaeger-extract/src/transparency_opentracing_jaeger_extract/: extract.py  server.py
transparency-opentracing-jaeger-extract/src/transparency_opentracing_jaeger_extract/templates/: index.html
transparency-opentracing-jaeger-extract/tests/: test_extract.py  test_server.py
uaa/: host-manager.xml  manager.xml  tomcat-users.xml  uaa.yml
(+138 files in other folders)
