[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["transparency_opentracing_jaeger_extract"]

[tool.coverage.report]
show_missing = true
fail_under = 50

[tool.poetry]
name = "transparency-opentracing-jaeger-extract"
version = "0.1.1"
description = "Simple jaeger extract json api server"
authors = ["Joris Clement <j.clement@campus.tu-berlin.de>"]

[tool.poetry.scripts]
transparency-opentracing-jaeger-extract = "transparency_opentracing_jaeger_extract.server:main"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.24.0"
click = "^7.1.2"
flask = "^1.1.2"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
coverage = {extras = ["toml"], version = "^5.1"}
pytest-cov = "^2.10.0"
pytest-mock = "^3.1.1"
black = "^19.10b0"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
